{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 26,
  "lineage": "7bec231a-3942-2a34-caae-114fc568fb65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0daa3b4c39f916481",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-118-94-21.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.94.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:internet-gateway/igw-0c2de19ede2a07c38",
            "id": "igw-0c2de19ede2a07c38",
            "owner_id": "071362082788",
            "tags": {
              "Name": "Jenkins-igw"
            },
            "tags_all": {
              "Name": "Jenkins-igw"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daa3b4c39f916481",
            "connectivity_type": "public",
            "id": "nat-07165539f98bb6b1d",
            "network_interface_id": "eni-06e8091f9d5a0d45e",
            "private_ip": "10.0.1.48",
            "public_ip": "18.118.94.21",
            "subnet_id": "subnet-0f9b9916a6c339602",
            "tags": {
              "Name": "VPC-NatGateway"
            },
            "tags_all": {
              "Name": "VPC-NatGateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:route-table/rtb-0a7a97f9b7423655b",
            "id": "rtb-0a7a97f9b7423655b",
            "owner_id": "071362082788",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-table-data"
            },
            "tags_all": {
              "Name": "route-table-data"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:route-table/rtb-0b7e5009700191627",
            "id": "rtb-0b7e5009700191627",
            "owner_id": "071362082788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07165539f98bb6b1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-private"
            },
            "tags_all": {
              "Name": "route-table-private"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:route-table/rtb-0989cca15cd0b8b62",
            "id": "rtb-0989cca15cd0b8b62",
            "owner_id": "071362082788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2de19ede2a07c38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-public"
            },
            "tags_all": {
              "Name": "route-table-public"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.10.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bce05fff8cf6b32",
            "route_table_id": "rtb-0a7a97f9b7423655b",
            "subnet_id": "subnet-0704e8b0297924327"
          },
          "dependencies": [
            "aws_route_table.data_route",
            "aws_subnet.data-subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.11.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0119f002370534d91",
            "route_table_id": "rtb-0a7a97f9b7423655b",
            "subnet_id": "subnet-0fcd838952eafb48b"
          },
          "dependencies": [
            "aws_route_table.data_route",
            "aws_subnet.data-subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.9.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0972f6ef936a85778",
            "route_table_id": "rtb-0a7a97f9b7423655b",
            "subnet_id": "subnet-019813150c5d9a229"
          },
          "dependencies": [
            "aws_route_table.data_route",
            "aws_subnet.data-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b5c6f4b381570f0",
            "route_table_id": "rtb-0b7e5009700191627",
            "subnet_id": "subnet-0e6b93a5acd16624d"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f843c305fb4d58d0",
            "route_table_id": "rtb-0b7e5009700191627",
            "subnet_id": "subnet-0fb1e741bd538a8b2"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.7.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053c498f8bc7ce690",
            "route_table_id": "rtb-0b7e5009700191627",
            "subnet_id": "subnet-0d045d664c703be36"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00366be966e5c2057",
            "route_table_id": "rtb-0989cca15cd0b8b62",
            "subnet_id": "subnet-0f9b9916a6c339602"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_route",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0248591cee08ced69",
            "route_table_id": "rtb-0989cca15cd0b8b62",
            "subnet_id": "subnet-036066fd0cb2c7a54"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_route",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc17fb3e4f00493",
            "route_table_id": "rtb-0989cca15cd0b8b62",
            "subnet_id": "subnet-0026a8f00ea5fd869"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_route",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.10.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0704e8b0297924327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0704e8b0297924327",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "data-subnet-b"
            },
            "tags_all": {
              "Name": "data-subnet-b"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.11.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0fcd838952eafb48b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0fcd838952eafb48b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "data-subnet-c"
            },
            "tags_all": {
              "Name": "data-subnet-c"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.9.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-019813150c5d9a229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-019813150c5d9a229",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "data-subnet-a"
            },
            "tags_all": {
              "Name": "data-subnet-a"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0e6b93a5acd16624d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0e6b93a5acd16624d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0fb1e741bd538a8b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0fb1e741bd538a8b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.7.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0d045d664c703be36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0d045d664c703be36",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "private-subnet-c"
            },
            "tags_all": {
              "Name": "private-subnet-c"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0f9b9916a6c339602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f9b9916a6c339602",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-036066fd0cb2c7a54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-036066fd0cb2c7a54",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "public-subnet-b"
            },
            "tags_all": {
              "Name": "public-subnet-b"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:subnet/subnet-0026a8f00ea5fd869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0026a8f00ea5fd869",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071362082788",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-088eb6d3710e20103"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:071362082788:vpc/vpc-088eb6d3710e20103",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040cefc10c23aa4ed",
            "default_route_table_id": "rtb-0db8fd12c5fc202ee",
            "default_security_group_id": "sg-081ae9b30695fa78d",
            "dhcp_options_id": "dopt-ff4e0094",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-088eb6d3710e20103",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db8fd12c5fc202ee",
            "owner_id": "071362082788",
            "tags": {
              "Name": "training"
            },
            "tags_all": {
              "Name": "training"
            }
          }
        }
      ]
    }
  ]
}